force-app/main/default/objects/sub_stopover__c/sub_stopover__c.object-meta.xml
<CustomObject>
    <label>sub stopover</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sub stopover</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>