force-app/main/default/objects/sub_stopover__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used to make sub Stop active or not on website</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>