force-app/main/default/objects/sub_stopover__c/fields/Blockout__c.field-meta.xml
<CustomField>
    <fullName>Blockout__c</fullName>
    <inlineHelpText>Enter Blockout dates per below format
23/09/2018
01/10/2018-22/10/2018</inlineHelpText>
    <label>Blockout</label>
    <type>TextArea</type>
</CustomField>