force-app/main/default/objects/sub_stopover__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>sub stopover</relationshipLabel>
    <relationshipName>sub_stopover</relationshipName>
    <type>Lookup</type>
</CustomField>