force-app/main/default/objects/sub_stopover__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>Destination Image - used on additional options</description>
    <label>Image</label>
    <length>200</length>
    <type>Text</type>
</CustomField>