force-app/main/default/objects/sub_stopover__c/fields/nights__c.field-meta.xml
<CustomField>
    <fullName>nights__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Nights</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>