force-app/main/default/objects/sub_stopover__c/fields/pre__c.field-meta.xml
<CustomField>
    <fullName>pre__c</fullName>
    <formula>CONTAINS(TEXT(type__c) , &apos;Pre Tour&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>pre</label>
    <type>Checkbox</type>
</CustomField>