force-app/main/default/objects/sub_stopover__c/fields/Price_Solo__c.field-meta.xml
<CustomField>
    <fullName>Price_Solo__c</fullName>
    <label>Price(Solo)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>