force-app/main/default/objects/sub_stopover__c/fields/Price_Solo_nz__c.field-meta.xml
<CustomField>
    <fullName>Price_Solo_nz__c</fullName>
    <label>Price(Solo) - NZD</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>