force-app/main/default/objects/sub_stopover__c/fields/stopover__c.field-meta.xml
<CustomField>
    <fullName>stopover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>stopover</label>
    <referenceTo>stopover__c</referenceTo>
    <relationshipLabel>sub stopover</relationshipLabel>
    <relationshipName>sub_stopover</relationshipName>
    <type>Lookup</type>
</CustomField>