force-app/main/default/objects/sub_stopover__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Deal__c</columns>
    <columns>nights__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Deal__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Deal__c</field>
        <operation>notContain</operation>
        <value>NRMA</value>
    </filters>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>